8269115: WebView paste event contains old data

Reviewed-by: arapte, kcr